# Software-Onboarding-2025

KrishKittur/lab1_hard_project/: CMakeLists.txt
KrishKittur/lab1_hard_project/src/: hello_world.cpp  main.cpp
KrishKittur/lab1_medium_project/: CMakeLists.txt
KrishKittur/lab2_hard_project/: default.nix  flake.nix  hellolib.nix  result
KrishKittur/lab2_hard_project/helloapp/: CMakeLists.txt  main.cpp
KrishKittur/lab2_hard_project/hellolib/: CMakeLists.txt
KrishKittur/lab2_hard_project/hellolib/src/: hellolib.cpp
KrishKittur/lab2_harder_project/: CMakeLists.txt  default.nix  flake.nix  main.cpp
KrishKittur/lab2_medium_project/: CMakeLists.txt  default.nix  flake.nix  result
KrishKittur/lab2_medium_project/include/: hellolib.hpp
KrishKittur/lab2_medium_project/src/: hellolib.cpp  main.cpp
KrishKittur/lab3/: CMakeLists.txt  default.nix  flake.nix  result
KrishKittur/lab3/include/: message.pb.h  udp_socket.hpp
KrishKittur/lab3/src/: client.cpp  message.pb.cc  message.proto  server.cpp  udp_socket.cpp
